--- a/taskly/app.json
+++ b/taskly/app.json
@@ -1,11 +1,12 @@
-{
+{ 
+ 
   "expo": {
     "name": "taskly",
     "slug": "taskly",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "taskly",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/splash.png",
